--- a/conf/mysql.conf
+++ b/conf/mysql.conf
@@ -28,7 +28,7 @@
 # By convention, the default datasource is named `default`
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/lunavista"
+db.default.url="jdbc:mysql://localhost:3306/lunavizta"
 db.default.username="root"
 db.default.password="root123"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
